--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -112,7 +112,7 @@ Hook,Hook
 "--Please Select--","--Please Select--"
 Basic,Basic
 Digest,Digest
-"OAuth 1.0","OAuth 1.0"
+OAuth,OAuth
 "All Store Views","All Store Views"
 Preview,Preview
 "Insert Variables","Insert Variables"
